@@ -92,5 +92,7 @@ depot_left_over_cargo=[LTN] Train __1__ entered depot __2__ with left over cargo
 dispatcher-enabled=[LTN] Dispatcher enabled by __1__.
 dispatcher-disabled=[LTN] Dispatcher disabled by __1__.
 
+stop-uses-default-network=[LTN] Stop __1__ uses default network id.
+
 [controls]
 ltn-toggle-dispatcher=Toggle LTN-Dispatcher.
